--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "lint": "jshint index.js",
     "test": "testem",
+    "test-build": "browserify test/tests.js --debug -t /usr/lib/node_modules/babelify --outfile test-build.js",
     "prebuild": "npm run lint || true",
-    "build": "browserify index.js --dev -t /usr/lib/node_modules/babelify --outfile build.js"
+    "build": "browserify index.js --debug -t /usr/lib/node_modules/babelify --outfile build.js"
   },
   "author": "Eric Gjertsen <ericgj72@gmail.com>",
   "license": "MIT",
@@ -16,6 +17,13 @@
     "data.validation": "^1.3.0",
     "data.maybe": "^1.2.0",
     "union-type": "^0.1.6"
+  },
+  "devDependencies": {
+    "tape": "^4.2.0",
+    "testem": "^0.9.4",
+    "babel": "^5.8.21",
+    "babelify": "^6.1.1",
+    "source-map-support": "^0.3.2"
   },
   "jshintConfig": {
     "esnext": true,
