--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ramda": "^0.17.1",
     "data.validation": "^1.3.0",
     "data.maybe": "^1.2.0",
+    "data.task": "^3.0.0",
     "union-type": "^0.1.6"
   },
   "devDependencies": {
