--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "data.validation": "^1.3.0",
     "data.maybe": "^1.2.0",
     "data.task": "^3.0.0",
-    "union-type": "^0.1.6"
+    "union-type": "^0.1.6",
+    "node-fetch": "^1.3.2"
   },
   "devDependencies": {
     "tape": "^4.2.0",
