--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "data.maybe": "^1.2.0",
     "data.task": "^3.0.0",
     "union-type": "^0.1.6",
-    "node-fetch": "^1.3.2"
+    "node-fetch": "^1.3.2",
+    "string.prototype.codepointat": "^0.2.0"
   },
   "devDependencies": {
     "tape": "^4.2.0",
