add suite ref tests (definitions, ref, refRemote) using cached refs
copy meta-schemas to test/remotes

fix: implement curryN for N > 10 instead of ramda's

add linker.linkSchema; http.linkSchema, http.validateWithSchema (not tested)

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "testem": "^0.9.4",
     "babel": "^5.8.21",
     "babelify": "^6.1.1",
-    "source-map-support": "^0.3.2"
+    "source-map-support": "^0.3.2",
+    "http-server": "^0.8.5"
   },
   "jshintConfig": {
     "globalstrict": true,
