Reimplement using Eithers for ref and path errors (not finished)
- context.resolveRef and path return Either
- reimpl context
- reimpl validateContext to fold Either.Left to Validation.Failure
- start to wrap predicate functions in similar fold's
  using applySubcontexts helper for complex predicates (e.g. additionalProperties)
- so far `additionalProperties`, `properties`, `required`, `type` are wrapped
- add basic tests (test-context)

TODO
- consider replacing Err.Compound with commute Validation's. A flat array of
  errors is easier to deal with than a tree, both in terms of reducing the
  code complexity and for the validation consumer.

- wrap/revise the rest of the predicate functions

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "babel": "^5.8.21",
     "babelify": "^6.1.1",
     "source-map-support": "^0.3.2",
-    "http-server": "^0.8.5"
+    "http-server": "^0.8.5",
+    "treis": "^2.3.13"
   },
   "jshintConfig": {
     "globalstrict": true,
